# Simple-GraphQL-Rocket

./: .env  .gitignore  Cargo.toml
src/: db.rs  main.rs  schema.rs
src/entities/: user.rs
src/routes/: mod.rs  routes.rs
src/routes/routes/: graphql_helper.rs
src/utils/: graphql_helper.rs  mod.rs
