[package]
name = "simple_graphql"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
async-graphql = "6"
async-graphql-rocket = "6"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
sea-orm-migration = { version = "1.0", optional = true }
dotenvy = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }

[default]
log_level = "debug"

[features]
default = []
